--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
     "react-papaparse": "^4.4.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "rehype-raw": "^7.0.0",
     "tabletop": "^1.6.3",
     "web-vitals": "^2.1.4"
   },
